@@ -11,18 +11,18 @@
 
     <groupId>org.jboss.windup</groupId>
     <artifactId>windup-parent</artifactId>
-    <version>4.2.1-SNAPSHOT</version>
+    <version>4.3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Windup Parent</name>
     <description>Migration Tools</description>
 
     <properties>
-        <version.forge>3.7.2.Final</version.forge>
-        <version.furnace>2.26.2.Final</version.furnace>
+        <version.forge>3.9.2.Final</version.forge>
+        <version.furnace>2.28.2.Final</version.furnace>
         <version.titangraph>1.0.0</version.titangraph>
-        <version.janusgraph>0.2.0</version.janusgraph>
-        <version.tinkerpop.blueprints>3.2.6</version.tinkerpop.blueprints>
+        <version.janusgraph>0.3.1</version.janusgraph>
+        <version.tinkerpop.blueprints>3.3.3</version.tinkerpop.blueprints>
         <version.freemarker>2.3.26-incubating</version.freemarker>
         <version.jacoco>0.7.9</version.jacoco>
 
@@ -37,6 +37,8 @@
         <forkCount>.5C</forkCount>
         <jacoco.argLine /> <!-- Will be set by the JaCoCo Maven plugin when active. -->
         <furnace.dot.skip>true</furnace.dot.skip> <!-- Default to not spending time generating the (expensive to generate) dot files -->
+
+        <surefire-argLine>-Xms512m -Xmx2048m -XX:MaxMetaspaceSize=768m -XX:ReservedCodeCacheSize=128m</surefire-argLine>
     </properties>
 
     <scm>
@@ -127,7 +129,38 @@
             <dependency>
                 <groupId>org.javassist</groupId>
                 <artifactId>javassist</artifactId>
-                <version>3.21.0-GA</version>
+                <version>3.23.1-GA</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>1.3.1</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.activation</groupId>
+                <artifactId>javax.activation-api</artifactId>
+                <version>1.2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.transaction</groupId>
+                <artifactId>javax.transaction-api</artifactId>
+                <version>1.2</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>2.3.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-impl</artifactId>
+                <version>2.3.0.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-core</artifactId>
+                <version>2.3.0.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -152,7 +185,7 @@
                         <exclude>${testExcludeString}</exclude>
                     </excludes>
                     <!-- http://maven.apache.org/surefire/maven-surefire-plugin/faq.html#late-property-evaluation -->
-                    <argLine>-Xms512m -Xmx2048m -XX:MaxMetaspaceSize=768m -XX:ReservedCodeCacheSize=128m</argLine>
+                    <argLine>${surefire-argLine}</argLine>
                     <reuseForks>false</reuseForks>
                 </configuration>
             </plugin>
@@ -452,6 +485,34 @@
                                 </configuration>
                             </execution>
                         </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>surefire-jdk11</id>
+            <activation>
+                <property>
+                    <name>jdk.version</name>
+                    <value>11</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <excludes>
+                                <exclude>${testExcludeString}</exclude>
+                                <exclude>org.jboss.windup.tests.application.WindupArchitectureMediumBinaryModeProcyonTest</exclude>
+                            </excludes>
+                            <!-- http://maven.apache.org/surefire/maven-surefire-plugin/faq.html#late-property-evaluation -->
+                            <argLine>${surefire-argLine} --add-modules java.se</argLine>
+                            <reuseForks>false</reuseForks>
+                            <forkCount>1</forkCount>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
